# database

./: CMakeLists.txt  LICENSE  README.md
src/: column_storage.cpp  column_storage.h  common.cpp  common.h  database_engine.cpp  database_engine.h  helpers.cpp  helpers.h  indices.cpp  indices.h  main.cpp  query.cpp  query.h  storage.cpp  storage.h  table.cpp  table.h
src/execution/: executor.cpp  executor.h  expression_execution.cpp  expression_execution.h  helpers.cpp  helpers.h  index_scanner.cpp  index_scanner.h  operation_visitor.cpp  operation_visitor.h  select_operation.cpp  select_operation.h  update_operation.cpp  update_operation.h  virtual_table.cpp  virtual_table.h
src/parser/: operator.cpp  parser.cpp  parser.h  token.cpp  token.h
src/query_expressions/: compiler.cpp  compiler.h  evaluator.cpp  evaluator.h  execution.cpp  execution.h  expressions.cpp  expressions.h  helpers.cpp  helpers.h  internal_expressions.cpp  internal_expressions.h  ir_optimizer.cpp  ir_optimizer.h  optimizer.cpp  optimizer.h  visitor.h
src/query_parser/: operator.h  parser.cpp  parser.h  token.h
tests/: dummy.cpp  integration.h  join.h  order.h  parser.h  select_index.h  select_simple.h  select_simple_optimize_expressions.h  select_simple_optimize_full.h  test_helpers.h  tokenizer.h  update_simple.h
